message SearchResultMessage 
{
	required string picture_name = 1;
	required uint32 result_length = 2;
    required uint32 task_id = 3;
	required string mj_id = 4;
	required string trackerUrl = 5;
	required uint32 status = 6;
    
}
